<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">Episodic</string>
<string name="no_series">No series defined, press menu to add a new series</string>
<string name="menu_delete">Delete</string>
<string name="menu_add">Add</string>
<string name="series_name">Series Title:</string>
<string name="season_num">Season Number:</string>
<string name="episode_num">Episode Number:</string>
<string name="confirm">Confirm</string>
<string name="season_code">Season:</string>
<string name="episode_code">Episode:</string>
<string name="plus">+</string>
<color name="orange">#FF9933</color>
<color name="blue">#3333FF</color>
<color name="transparent">#0000</color>
<string name="tags">Tags:</string>
<string name="filter">Filter</string>
<string name="no_tags">No tags set</string>
<string name="add_tags">Add tags</string>
<string name="save_tag"> + </string>
<string name="menu_settings">Settings</string>

<string name="tags_empty">No tags have been defined yet...</string>
<string name="tag_delete_warning">Deleting this tag will also remove it from any other series it is associated with. Are you sure you want to continue?</string>
<string name="tag_delete_title">Warning!</string>
</resources>
