<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:orientation="vertical"
	android:layout_height="fill_parent">

	<ListView android:id="@+id/android:list" android:layout_width="fill_parent"
		android:layout_height="wrap_content" />

	<TextView android:id="@+id/android:empty"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:text="@string/tags_empty" />


	<LinearLayout android:id="@+id/LinearLayout01"
		android:layout_height="wrap_content" android:layout_width="fill_parent">

		<EditText android:id="@+id/new_tag_edit_text"
			android:layout_width="fill_parent" android:layout_height="fill_parent"
			android:gravity="left" android:layout_gravity="fill_horizontal"
			android:layout_weight="1" android:layout_alignParentLeft="true"></EditText>

		<Button android:text="@string/plus" android:id="@+id/add_new_tag_button"
			android:layout_width="fill_parent" android:layout_height="fill_parent"
			android:layout_gravity="fill_horizontal" android:layout_weight="3"
			android:layout_alignParentRight="true"></Button>

	</LinearLayout>
	
	<Button android:id="@+id/tag_comfirm" android:layout_height="wrap_content"
			android:text="@string/confirm" android:layout_width="fill_parent"></Button>

	</LinearLayout>
