<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/series_id" 
	android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    
    <LinearLayout android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:layout_weight="10"
    	android:gravity="center_vertical">
    
		<TextView android:id="@+id/series_name" 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textSize="18sp"
		    android:paddingLeft="2sp"/>
		    
		<LinearLayout android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:paddingLeft="8sp">
	    
			<TextView android:text="@string/season_code"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="14sp"/>
			    
			<TextView android:id="@+id/season_num"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="16sp"
			    android:paddingLeft="4sp"
			    android:paddingRight="4sp"
			    android:textStyle="bold"
			    android:textColor="@color/orange"/>
			    
			<TextView android:text="@string/episode_code"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="14sp"/>
			    
			<TextView android:id="@+id/episode_num"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textSize="16sp"
			    android:paddingLeft="4sp"
			    android:paddingRight="4sp"
			    android:textStyle="bold"
			    android:textColor="@color/blue"/>
			    
		</LinearLayout>
		
	</LinearLayout>
	    
	<ImageButton android:text="@string/plus"
		android:focusable="false"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/season_plus_button"
		android:gravity="right"
		android:layout_gravity="right"
		android:src="@drawable/plus_orange_32x32" android:background="@color/transparent" android:padding="5sp"/>
		<!-- android:background="@color/transparent" -->

	<ImageButton android:text="@string/plus"
		android:focusable="false"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/episode_plus_button"
		android:gravity="right"
		android:layout_gravity="right"
		android:src="@drawable/plus_blue_32x32" android:background="@color/transparent" android:padding="5sp"/>
		<!-- android:background="@color/transparent" -->
		
</LinearLayout>